--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,9 @@ dependencies:
   get: ^3.15.0
   # replace shared_preferences
   get_storage: ^1.3.2
+  # splash screen
+  animated_splash: ^1.0.0
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
